    * 1099 FIX: tsm_scratch: now returns the variable name instead the values during inventory...
    * 0650 FIX: f5_bigip_pool: limits to the number of active nodes are now correctly applied...
            NOTE: Please refer to the migration notes!
    * 1102 FIX: esx_vsphere_counters: no longer raise false alarms because of invalid data from ESX Host...

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1155 NagVis map edit/view permissions can now be set using roles/groups...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...
    * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
    * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'

    Notifications:
    * 1156 FIX: Graphs in HTML mails are now sent again where they where missing...
    * 1157 FIX: Fixed SMS plugin on at least debian (distrs which have no sendsms/smssend)...

    Event Console:
    * 1148 Allow execution of actions when cancelling events...
    * 1007 FIX: check_mkevents: fix case where events contain binary zeroes

    HW/SW-Inventory: