@@ -1,0 +1,9 @@
+Title: check_mk-ibm_svc_systemstats.diskio, check_mk-ibm_svc_systemstats.iops: fix exception in Perf-O-Meter
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.5i6
+Date: 1409230838
+Class: fix
+
+
