@@ -64,6 +64,7 @@
     * 0650 FIX: f5_bigip_pool: limits to the number of active nodes are now correctly applied...
             NOTE: Please refer to the migration notes!
     * 1102 FIX: esx_vsphere_counters: no longer raise false alarms because of invalid data from ESX Host...
+    * 1149 FIX: check_mk-ibm_svc_systemstats.diskio, check_mk-ibm_svc_systemstats.iops: fix exception in Perf-O-Meter
 
     Multisite:
     * 1066 Implemented Dashboard Designer...
